Users can now upload their own profile pictures
